18 March 2025: Wouter
	- Fix #1251: WSAPoll first argument cannot be NULL.

17 March 2025: Wouter
	- Fix representation of types GPOS and RESINFO, add rdf type for
	  unquoted str.

16 March 2025: Yorgos
	- Fix 'unbound-control flush_negative' when reporting removed data;
	  reported by David 'eqvinox' Lamparter.

28 February 2025: Wouter
	- Merge #1238: Prefer SOURCE_DATE_EPOCH over actual time.
	  Add --help output description for the SOURCE_DATE_EPOCH variable.

25 February 2025: Wouter
	- Merge #1243: Do not shadow tm on line 236.

24 February 2025: Yorgos
	- Fix hash calculation for cachedb to ignore case. Previously, cached
	  records there were only relevant for same case queries (if not
	  already in Unbound's internal cache).

19 February 2025: Yorgos
	- Fix static analysis report about unhandled EOF on error conditions
	  when reading anchor key files.
	- Merge #1241: Fix infra-keep-probing for low infra-cache-max-rtt
	  values.

17 February 2025: Yorgos
	- Consider reconfigurations when calculating the still_useful_timeout
	  for servers in the infrastructure cache.

30 January 2025: Wouter
	- Fix #986: Resolving sas.com with dnssec-validation fails though
	  signed delegations seem to be (mostly) correct.

29 January 2025: Yorgos
	- Make the default value of module-config "validator iterator"
	  regardless of compilation options. --enable-subnet would implicitly
	  change the value to enable the subnetcache module by default in the
	  past.

24 January 2025: Yorgos
	- Merge #1220 from Petr Menšík, Add unbound members group access to
	  control key.

21 January 2025: Yorgos
	- Use the same interface listening port discovery code for all needed
	  protocols.
	- Port to string only when needed before getaddrinfo().
	- Do not open unencrypted channels next to encrypted ones on the same
	  port.
	- Merge #1224 from Theo Buehler: Do not use DSA API unless USE_DSA is
	  set.

21 January 2025: Wouter